# John-Pork-refactor

./: .gitignore  README.md  bot.py  config.yaml  lang.yaml  pyproject.toml
core/: config_manager.py  lang_manager.py  logger.py  middleware.py  user_service.py
core/database/: __init__.py  db.py  models.py
handlers/: chat.py  language.py  lucky.py  porkify.py  start.py
utils/: ai_function.py  chat_address.py  cooldown.py
